@@ -3,6 +3,7 @@
 *******************************************************************************
 
 === 1.0.24 ===
+* Added MacOS dependencies.
 * Updated build scripts.
 
 === 1.0.23 ===
